@@ -3,6 +3,8 @@ Revision history for Perl extension Wx.
 0.9906 TBR
     - wrapped wxWebView ( wxWidgets ge 2.9.3 )
     - wrapped wxTimePickerCtrl ( wxWidgets ge 2.9.3 )    
+    - wrapped wxRichToolTip ( wxWidgets ge 2.9.3 )
+    - wrapped wxBannerWindow ( wxWidgets ge 2.9.3 )
 
 0.9905 Fri Mar 16 2012
     - wrapped wxPropertyGrid ( wxWidgets ge 2.9.3 )
